--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>We need your location to show nearby stores.</string>
+		<key>NSLocationAlwaysUsageDescription</key>
+		<string>We need your location to provide location-based services.</string>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>We need you to access your photo library to upload photos.</string>
+		<key>NSCameraUsageDescription</key>
+		<string>We need you to access your camera to take photos.</string>
+		<key>NSMicrophoneUsageDescription</key>
+		<string>We need you to access your microphone to record audio.</string>
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
