--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.3
   introduction_screen: ^3.1.14
+  geolocator: ^13.0.2
+  image_picker: ^1.1.2
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
